# UCD_CPP

./: .gitignore  CMakeLists.txt  CMakeLists_dete_server.txt  main.cpp  main_dete_server.cpp  main_recommend.cpp  readme.md
document/: 20230824_ucd考题.html  20230824_ucd考题.md  CMake学习.md  UCD_app_v1.5.9.md  comand normal.md  env.md  learn_cpp.md  python_cpp混合编程.md  各个服务器的缓存路径.md  大ucd.md  数据质量文档.md
include/: config_file.hpp  deteRes.hpp  easyexif.h  fileOperateUtil.hpp  lablelmeObj.hpp  md5.hpp  operateDeteRes.hpp  paramInfo.hpp  parseArgs.hpp  parse_img_exif_info.hpp  printCpp.hpp  pystring.h  redisBook.hpp  saturn_database_sql.hpp  strToImg.hpp  the_book_of_change.hpp  tqdm.h  ucDatasetUtil.hpp  ucd_tools.hpp  xini_file.h  xml_file.hpp  yoloDete.hpp
scripts/: build_database.sql  docker_file  install_ucd.sh  move_dll.py  redisbook.py  start_server.sh
src/: deteObj.cpp  deteRes.cpp  fileOperateUtil.cpp  labelmeObj.cpp  md5.cpp  operateDeteRes.cpp  paramInfo.cpp  parseArgs.cpp  printCpp.cpp  redisBook.cpp  saturn_database_sql.cpp  the_book_of_change.cpp  ucDatasetUtil.cpp  ucd_tools.cpp
src/tools/: easyexif.cpp  pystring.cpp  strToImg.cpp  tinyxml2.cpp
